2012-03-24  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_wmifield.php: Fixed wmi field help.

2012-03-23  Vanessa Gil  <vanessa.gil@artica.es>

	* include/help/en/help_wmifield.php
	  include/help/es/help_wmifield.php: Fixed wmi field help.

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php: Added calculation
	of the left side of the graph space. Merged from 4.0

2012-03-22  Vanessa Gil  <vanessa.gil@artica.es>

	* pandoradb.sql
	  pandoradb.postgreSQL.sql
	  pandoradb.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.mysql.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.oracle.sql,
	  extras/pandoradb_migrate_4.0.x_to_4.1.postgreSQL.sql: added 'operation'
	to treport_content_item table.

	* godmode/reporting/reporting_builder.item_editor.php
	  include/functions_reporting.php
	  include/ajax/reporting.ajax.php
	  include/javascript/pandora.js: Added operation: sum,max,min or avg to
	global reports.

	* images/sum.png
	  images/avg.png
	  images/min.png
	  images/max.png: Added icons.

2012-03-22  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_pchart.php
	  include/graphs/pChart/pDraw.class.php: Added to pchart library the
	parameter to set an independent font size to graph ticks and set it
	on the graph charts one point less

2012-03-22 Miguel de Dios  <miguel.dedios@artica.es>
	& Sergio Martin <sergio.martin@artica.es> using Gobby collaborative
	real-time editor http://obby.0x539.de
	
	* include/functions.php: changed into the function "get_report_types" the
	array types to tree for show better the select box, and changed into the
	function "get_report_name".
	
	* include/functions_forecast.php: fixed into the function
	"forecast_projection_graph" when zero data and change to user the user conf
	style for the dates.

	* include/functions_html.php: the function "html_debug_print" was improved
	to show type and sizes.
