@@ -1,5 +1,11 @@
 2012-03-24  Junichi Satoh  <junichi@rworks.jp>
 
+	* include/functions_agents.php, include/functions_config.php,
+	include/db/postgresql.php, operation/agentes/estado_agente.php: Fixed
+	SQL error with PostgreSQL.
+
+2012-03-24  Junichi Satoh  <junichi@rworks.jp>
+
 	* include/help/ja/help_wmifield.php: Fixed wmi field help.
 
 2012-03-23  Vanessa Gil  <vanessa.gil@artica.es>
